--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.6",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   },
